# 2017-inseason

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  ]  deploy  toolchain.cmake
.metadata/: version.ini
.metadata/.plugins/org.eclipse.core.resources/.root/: 3.tree
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
logs/: columns.py  graph.py  log::2017-01-29::14:43:34.txt  log::2017-02-25::11:36:11.txt  log::2017-02-25::11:40:35.txt  log::2017-02-25::13:44:46.txt  log::2017-02-25::13:48:30.txt  log::2017-02-25::13:49:50.txt  log::2017-02-25::14:09:56.txt  log::2017-02-25::15:06:35.txt  log::2017-02-25::15:10:26.txt  log::2017-02-25::15:11:10.txt  log::2017-02-25::15:13:19.txt  log::2017-02-26::11:02:04.txt  log::2017-02-26::12:03:28.txt  log::2017-02-26::14:04:55.txt  log::2017-02-26::14:16:42.txt  log::2017-02-26::15:01:22.txt  log::2017-02-26::15:01:37.txt  log::2017-02-26::16:13:23.txt  log::2017-03-02::17:28:41.txt  log::2017-03-02::17:28:43.txt  log::2017-03-07::18:00:18.txt  log::2017-03-07::18:01:40.txt  log::2017-03-07::18:02:24.txt  log::2017-03-07::18:03:18.txt  log::2017-03-07::18:04:03.txt  log::2017-03-07::18:05:38.txt  log::2017-03-07::18:06:38.txt  log::2017-03-07::18:07:13.txt  log::2017-03-07::18:07:56.txt  log::2017-03-07::18:09:52.txt  log::2017-03-07::18:10:03.txt  log::2017-03-07::18:11:56.txt  log::2017-03-07::18:27:48.txt  log::2017-03-07::18:30:30.txt  log::2017-03-07::18:31:07.txt  log::2017-03-07::18:32:40.txt  period.py  validate.py
logs/davis/: log::2017-03-11::17:57:39.txt  log::818288.txt  log::824639.txt  log::833009.txt  q3_log.txt
logs/davis/davis-logs/: log::2017-02-15::01:47:08.txt  log::744583.txt  log::813968.txt  log::819436.txt  log::820336.txt  log::821545.txt  log::822697.txt  log::823606.txt  log::824633.txt  log::826861.txt  log::829504.txt  log::829815.txt
past_logs/: log::2017-01-29::14:43:34.txt  log::2017-02-25::11:53:57.txt  log::2017-02-25::11:55:59.txt  log::2017-02-25::12:03:53.txt  log::2017-02-25::13:19:16.txt  log::2017-02-25::13:21:50.txt  log::2017-02-25::13:33:06.txt  log::2017-02-25::13:45:37.txt  log::2017-02-25::13:46:06.txt  log::2017-02-25::14:09:42.txt  log::2017-02-25::14:14:45.txt  log::2017-02-25::14:22:41.txt  log::2017-02-25::15:06:21.txt  log::2017-02-25::15:11:24.txt  log::2017-02-25::15:13:04.txt  log::2017-02-25::15:36:34.txt  log::2017-02-26::11:02:06.txt  log::2017-02-26::11:12:16.txt  log::2017-02-26::13:56:02.txt  log::2017-02-26::14:14:12.txt  log::2017-02-26::14:14:25.txt  log::2017-02-26::14:16:57.txt  log::2017-02-26::14:21:36.txt  log::2017-02-26::14:51:53.txt  log::2017-02-26::14:52:06.txt  log::2017-02-26::14:56:04.txt  log::2017-02-26::14:56:19.txt  log::2017-02-26::15:27:12.txt  log::2017-02-26::15:44:59.txt  log::2017-02-28::18:36:51.txt
src/: Autonomous.cpp  Autonomous.h  Disabled.cpp  Disabled.h  PoseManager.cpp  PoseManager.h  Robot.cpp  Robot.h  RobotInfo.h  Teleop.cpp  Teleop.h  Test.cpp  Test.h  VisionTask.cpp  VisionTask.h
src/auto/: AutoCommon.h  CitrusHopperAuto.cpp  CitrusKpaAndGearAuto.cpp  HaltAuto.cpp  HopperThenshoot.cpp  KillerBeeHopperAuto.cpp  KpaAndGearAuto.cpp  MadtownHopperThenshoot.cpp  MidPegKpaAuto.cpp  SpartanHopperAuto.cpp
src/controllers/: ArcadeDriveController.cpp  ArcadeDriveController.h  AssistedArcadeDrive.cpp  AssistedArcadeDrive.h  BoilerPixyVisionDriveController.cpp  BoilerPixyVisionDriveController.h  CheesyDriveController.cpp  CheesyDriveController.h  FlywheelGains.h  GearPixyVisionDriveController.cpp  GearPixyVisionDriveController.h  OpenloopArcadeDriveController.cpp  OpenloopArcadeDriveController.h  PIDDrive.cpp  PIDDrive.h  PIDDriveController.cpp  PIDDriveController.h  PixyVisionDriveController.cpp  PixyVisionDriveController.h  RampedPIDDriveController.cpp  RampedPIDDriveController.h  ShooterGainsValentines.h  ShooterGains_back.h  ShooterGains_front.h  SplineDriveController.cpp  SplineDriveController.h  StateSpaceFlywheelController.cpp  StateSpaceFlywheelController.h  StraightDriveController.cpp  StraightDriveController.h  TrapDriveController.cpp  TrapDriveController.h  VelocityTurnPID.cpp  VelocityTurnPID.h  VisionDriveController.cpp  VisionDriveController.h
src/lib/: AdbBridge.cpp  AdbBridge.h  ControllerBase.cpp  ControllerBase.h  CoopMTRobot.cpp  CoopMTRobot.h  CoopTask.cpp  CoopTask.h  DriveBase.cpp  DriveBase.h  GreyCompressor.cpp  GreyCompressor.h  GreyTalon.cpp  GreyTalon.h  InterpLookupTable.cpp  InterpLookupTable.h  JoystickHelper.cpp  JoystickHelper.h  MotionProfile.cpp  MotionProfile.h  MsgChannel.h  PixyI2C.h  PixySerial.h  SPIGyro.cpp  SPIGyro.h  SingleThreadTaskMgr.cpp  SingleThreadTaskMgr.h  SmartPixy.cpp  SmartPixy.h  StateSpaceController.cpp  StateSpaceController.h  StateSpaceGains.h  TaskMgr.cpp  TaskMgr.h  TrapProfile.cpp  TrapProfile.h  VisionServer.cpp  VisionServer.h  WrapDash.cpp  WrapDash.h
src/lib/filters/: BullshitFilter.cpp  BullshitFilter.h  CascadingFilter.cpp  CascadingFilter.h  Debouncer.h  DelaySwitch.cpp  DelaySwitch.h  FilterBase.cpp  FilterBase.h  MedianFilter.cpp  MedianFilter.h  MovingAverageFilter.cpp  MovingAverageFilter.h  PID.cpp  PID.h  RampedOutput.cpp  RampedOutput.h
src/lib/logging/: AsynchLogCell.cpp  AsynchLogCell.h  LogSpreadsheet.cpp  LogSpreadsheet.h
src/lib/util/: Ansi.h  Matrix.cpp  Matrix.h  Util.cpp  Util.h
src/subsystems/: BallIntake.cpp  BallIntake.h  BoilerPixy.cpp  BoilerPixy.h  Drive.cpp  Drive.h  GearIntake.cpp  GearIntake.h  GearPixy.cpp  GearPixy.h  Hanger.cpp  Hanger.h  Intake.cpp  Intake.h  Lights.cpp  Lights.h  PixyThread.cpp  PixyThread.h  Shooter.cpp  Shooter.h  Turret.cpp  Turret.h
test/: CMakeLists.txt
test/src/: DriveControllerTestHarness.cpp  DriveControllerTestHarness.h  TrapProfileTest.cpp  UtilTest.cpp  main.cpp
test/wpilib-harness/: WPILib.h
(+13 files in other folders)
